# mkwhl

./: Makefile  README.rst  build.sh  pyproject.toml
man/: mkwhl.1
mkwhl/: __init__.py  __main__.py  args.py  build.py  common.py  dist_info.py  main.py  props.py  wheel.py
