[project]
name = "mkwhl"
version = "0.3.1"
description = "Python wheel creation utility"
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "GPLv3"}
dependencies = [
    "packaging >=23.1",
    "tomli ~=2.0.1; python_version<'3.11'",
]
authors = [
    {name = "Bozo Kopic", email = "bozo@kopic.xyz"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

[project.scripts]
mkwhl = "mkwhl.main:main"

[project.urls]
Repository = "https://github.com/bozokopic/mkwhl.git"

[build-system]
build-backend = "mkwhl"
backend-path = ["."]
requires = [
    "packaging >=23.1",
    "tomli ~=2.0.1; python_version<'3.11'",
]

[tool.mkwhl]
src-dir = '.'
src-include-patterns = ["mkwhl/**/*"]
data-paths = [
    {src = "man/mkwhl.1", dst = "share/man/man1/mkwhl.1"},
]
